--- a/SOK1004_C2_H22.qmd
+++ b/SOK1004_C2_H22.qmd
@@ -75,7 +75,11 @@ Kommandoen `geom_smooth()` bruker en såkalt lokal regresjon til å tegne en kur
 
 Gi en fullstendig og nøyaktig beskrivelse av figuren. Tolk helningen på linjene og diskuter variasjon mellom og innad i landene. Drøft hvilke forhold figuren illustrerer på en god måte og hvilken informasjon som er vanskelig å tolke.
 
-*\[Svar på oppgave Ia her.\]*
+*Figuren viser oss produksjons basert CO2 utslipp i forhold til BNP. I figuren er det kun tatt med de fem største økonomiene i verden (målt ved kjøpekraftjustert BNP).*
+
+*I figuren kan vi se at Kina er det landet med de største utslippene. Landet har en veldig jevn økning hvor det ser ut som BNP og CO2 utslipp går veldig hånd i hånd. Til tross for veldig like verdier i BNP så har USA et mye mindre utslipp, nesten halvparten av Kina.*
+
+*Tyskland, India og Japan ligger såpass tett at det er vanskelig å så noen konkrete hendelser ut i fra dem, men vi kan se at mens India har hatt en kontinuerlig økning av utslipp, så har både Japan og Tyskland hatt en nedgang.*
 
 ### Oppgave Ib
 
@@ -85,21 +89,98 @@ Lag en figur som viser karbonintensiteten $CI_{t}$ til de fem største økonomie
 
 ```{r}
 # Løs oppgave Ib her
+df %>%
+  drop_na(gdp, co2) %>%
+  
+  mutate(gdp = gdp/10^12) %>%
+
+  mutate(co2 = co2/10^3) %>%
+  
+  mutate(ci = (co2/gdp)) %>%
+
+  filter(country %in% list, year %in% c(1850:2020)) %>%
+  
+  ggplot(aes(x=year, y=ci, color = country)) %>%
+  
+  + labs(y = "Karbonintensitet", x = "År", title = "Karbonintensitet over tid", color = "Country") %>%
+   
+  + geom_line() %>% 
+  
+  + geom_smooth(se = FALSE) %>%
+  
+  + theme_bw()
+
+
 ```
 
-*\[Besvar oppgave 1b her\]*
+*Figuren viser oss mengden karbonintensitet CO2 delt på BNP for de fem største økonomiene i verden. Altså viser den oss hvor mye CO2 i kilogram som ble brukt for å øke verdiskapningen med 1 USD.*
+
+*Vi ser at USA og Tyskland har fulgt hverandre ganske godt hele perioden fra 1850 til 2020, men at rundt 1940-tallet hadde Tyskland en veldig kraftig nedgang. Den samme perioden det var andre verdenskrig. Begge landene nådde sitt toppunkt i perioden 1900 - 1925, og at de i dag nærmer seg samme utslipp som i 1850.*
+
+*Mens Tyskland og USA var på sitt høyeste så var Kina på sitt laveste. Frem mot 1970-tallet hadde de en kraftig økning, men siden den gang har de gradvis sunket.*
+
+*Japan har for det meste fulgt de vestlige landene, bare på en mye mindre skala og ikke fult så eksplosivt.*
 
 ### Oppgave Ic
 
 Undersøk hvorvidt bruken av kull som energikilde kan forklare forskjellen i karbonintensitet mellom de fem største landene. Lag to figurer og 100-200 ord med tekst. Husk å gi en fullstendig og nøyaktig beskrivelse av figurene.
 
-**Figur 1**
+**Figur 1 - CO2 fra kull**
 
 ```{r}
 # besvar oppgave 1c her
+df %>%
+  drop_na(coal_co2) %>%
+
+  filter(country %in% list, year %in% c(1850:2020)) %>%
+  
+  ggplot(aes(x=year, y=coal_co2, color = country)) %>%
+  
+  + labs(y = "CO2 fra kull", x = "År", title = "CO2 fra kull over tid", color = "Country") %>%
+  
+  + geom_line() %>% 
+  
+  + geom_smooth(se = FALSE) %>%
+  
+  + theme_bw()
 ```
 
-*\[Besvar oppgave Ic her\]*
+**Figur 2 - Karbonintensitet**
+
+```{r}
+df %>%
+  drop_na(gdp, co2) %>%
+  
+  mutate(gdp = gdp/10^12) %>%
+
+  mutate(co2 = co2/10^3) %>%
+  
+  mutate(ci = (co2/gdp)) %>%
+
+  filter(country %in% list, year %in% c(1850:2020)) %>%
+  
+  ggplot(aes(x=year, y=ci, color = country)) %>%
+  
+  + labs(y = "Karbonintensitet", x = "År", title = "Karbonintensitet over tid", color = "Country") %>%
+   
+  + geom_line() %>% 
+  
+  + geom_smooth(se = FALSE) %>%
+  
+  + theme_bw()
+```
+
+*Figur 1 viser mengden CO2, i millioner tonn, i de fem største økonomiene i verden fra 1850 til 2020.*
+
+*Som grafen i figur 1 viser så har Kina hatt en eksponentiell økning i mengden CO2 som kommer fra kull frem mot år 2020. Samtidig så ser vi en minsking i karbonintensitet fra rundt 1970 til nå.*
+
+*USA og Japan har begge hatt en slak, men jevn økning i mengde CO2 fra kull i hele tidsperioden. USA har siden 1920-tallet hatt kraftig nedgang i karbonintensitet og Japan har også hatt en jevn nedgang.*
+
+*India, siden 1970-tallet, har hatt en stor økning i CO2 fra kull, men mengden karbonintensitet har minsket.*
+
+*Tyskland er det eneste landet med nedgang i mengden CO2 fra kull. Karbonintensiteten har også sunket, men dette har den gjort allerede i en lang periode.*
+
+*Ut i fra disse observasjonene kan jeg ikke dra noen særlig stor sammenheng mellom de to. Det er mulig kull kan ha en liten påvirkning, men det er i en veldig liten grad.*
 
 ## II. Konsumbaserte CO2-utslipp
 
@@ -109,7 +190,7 @@ I den foregående analysen har vi slått fast at Kina har høy karbonintensitet 
 
 Forklar hvordan konsumbaserte CO2-utslipp er konstruert og hvordan vi skal tolke den.
 
-*\[Besvar oppgave IIa her.\]*
+*Fra nettsiden dataene er hentet fra så står det at konsumbaserte CO2-utslipp er hvor mye et land konsumerer i løpet av et år. Her er det også tatt hensyn til import og eksport. Hvis et lands konsumbaserte CO2 utslipp er høyere enn landets produserte utslipp er landet en nettoimportør av CO2. Ved motsatt så er landet en nettoeksportør.*
 
 ### Oppgave IIb
 
@@ -119,9 +200,22 @@ Lag en figur som viser utviklingen av konsumbasert CO2 per person og totale, kon
 
 ```{r}
 # besvar oppgave IIb her
+df %>%
+  
+  filter(country %in% list, year %in% c(1990:2020)) %>%
+  
+  ggplot(aes(x=year, y=consumption_co2, colour=country)) %>%
+
+  + geom_point(aes(size = consumption_co2_per_capita)) %>%
+
+  + labs(y = "Total konsumbasert CO2", x = "År", title = "Konsumbasert CO2 og Konsumbasert co2 per person over tid", color = "Country") %>%
+  
+  + geom_smooth(se = FALSE) %>%
+  
+  + theme_bw()
 ```
 
-*\[Besvar oppgave IIb her.\]*
+*Figuren viser konsumbasert CO2 utslipp i perioden 1990 til 2020 for de fem største økonomiene i verden. Samtidig viser størrelsen på prikkene mengden konsumbasert CO2 utslipp per hode.*
 
 ## III. Produksjon- og konsumbaserte utslipp
 
@@ -146,4 +240,4 @@ Positive (negative) value indicates net imports (export) of CO2 emissions.", col
   + theme_bw()
 ```
 
-*\[Besvar oppgave III her\]*
+*Figuren viser, i prosent, andelen CO2 som importeres eller eksporteres via handel. Verdier over null betyr at landet importerer CO2 mens verdier under null betyr at landet eksporterer CO2.*
